# schema-checker

./: LICENSE.txt  README.md  pyproject.toml  setup.py
src/: schema_checker.py
